--- a/docker.yml
+++ b/docker.yml
@@ -1,10 +1,10 @@
 - hosts: all
   tasks:
     - name: stop container
-      shell:  docker container stop rockstar-container                    #name of container 
+      shell:  docker container stop project                    #name of container 
     - name: remove container
-      shell: docker container rm rockstar-container
+      shell: docker container rm project
     - name: remove docker image
-      shell: docker image rm sakir2141/docker-job                            #name of images (docker images)
+      shell: docker image rm sakir2141/project                            #name of images (docker images)
     - name: create new container
-      shell: docker container run -itd --name rockstar-container -p 9000:80 vikashashoke/docker-job     #(docker-job>> name of jenkins job)
+      shell: docker container run -itd --name project -p 9000:80 sakir2141/project     #(docker-job>> name of jenkins job)
