--- a/ansible.yml
+++ b/ansible.yml
@@ -5,6 +5,6 @@
    - name: remove container
      shell: docker container rm mydockercontainer
    - name: remove docker image
-     shell: docker image rmi sakir2141/docker_image
+     shell: docker image rmi sakir2141/project
    - name: create new container
-     shell: docker container run -itd --name mydockercontainer -p 9000:80 sakir2141/docker_image
+     shell: docker container run -itd --name mydockercontainer -p 9000:80 sakir2141/project
